--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "@babel/core": "7.1.0",
+    "@material-ui/core": "^3.9.2",
     "@svgr/webpack": "2.4.1",
     "babel-core": "7.0.0-bridge.0",
     "babel-eslint": "9.0.0",
@@ -45,6 +46,7 @@
     "ramda": "^0.26.1",
     "react": "^16.5.2",
     "react-app-polyfill": "^0.1.3",
+    "react-data-grid": "^6.0.2-0",
     "react-dev-utils": "^6.0.5",
     "react-dom": "^16.5.2",
     "react-redux": "^5.0.7",
